# lindy-orchestrator

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  STATUS.md  TODOS.md  WORKFLOW.md  orchestrator.yaml  pyproject.toml
.codex/: sandbox-allowlist.yml  worktree_init.sh
.codex/skills/debug/: SKILL.md
.codex/skills/land/: SKILL.md
.codex/skills/pull/: SKILL.md
.codex/skills/push/: SKILL.md
.github/workflows/: ci.yml  config-e2e.yml  publish.yml
docs/: REFERENCE.md  USAGE.md  USAGE_helpers.md
docs/agents/: boundaries.md  conventions.md  protocol.md
docs/design/: context-engineering.md  dispatch-runtime-advanced.md  dispatch-runtime.md  entropy-management.md  harness-engineering-comparison.md  layer-enforcement.md  observability-integration.md  private-fork-evolution-prompt.md  private-fork-usage-prompt.md
docs/plans/: AUDIT_FINAL_REPORT.md  AUDIT_RISK_MAP.md  AUDIT_RISK_MAP_details.md  GENERAL_GC_REVIEW_OPTMIZATION.md  ITERATION_1_plan.md  ITERATION_2_5_qa_fixes.md  ITERATION_2_5_tool_hardening.md  ITERATION_2_plan.md  REFACTOR_SCAFFOLD_FILES_AND_CLEAR.md
docs/superpowers/specs/: 2026-03-28-pipeline-architecture-design.md  2026-03-28-pipeline-task-dag.md
docs/superpowers/specs/tasks/: README.md  T01-data-models.md  T02-config-schema.md  T02b-provider-factory.md  T03-soft-deprecation.md  T04-planner-runner.md  T05-generator-runner.md  (+7 more)
scripts/: create_linear_issues.py  e2e_observability_test.sh
src/lindy_orchestrator/: __init__.py  analytics.py  cli.py  cli_clear.py  cli_config.py  cli_ext.py  cli_helpers.py  cli_init.py  cli_onboard.py  cli_onboard_helpers.py  cli_scaffold.py  cli_stats.py  cli_status.py  codex_dispatcher.py  command_queue.py  config.py  console.py  dag.py  dashboard.py  dispatch_core.py  dispatcher.py  evaluator_runner.py  gc.py  generator_runner.py  hooks.py  jsonl.py  logger.py  mailbox.py  metrics.py  models.py  orchestrator.py  orchestrator_helpers.py  otel.py  planner.py  planner_runner.py  prompts.py  reporter.py  role_configs.py  scheduler.py  scheduler_helpers.py  (+4 more)
src/lindy_orchestrator/discovery/: __init__.py  analyzer.py  analyzer_helpers.py  generator.py  interview.py
src/lindy_orchestrator/entropy/: __init__.py  scanner.py  scanner_helpers.py  scanner_types.py
src/lindy_orchestrator/providers/: __init__.py  base.py  claude_cli.py  codex_cli.py
src/lindy_orchestrator/qa/: __init__.py  agent_check.py  ci_check.py  command_check.py  feedback.py  layer_check.py  structural_check.py
src/lindy_orchestrator/status/: __init__.py  parser.py  templates.py  writer.py
src/lindy_orchestrator/trackers/: __init__.py  base.py  factory.py  github_issues.py
src/lindy_orchestrator/web/: __init__.py  server.py
tests/: conftest.py  test_analytics.py  test_analyzer.py  test_architecture_md.py  test_async_hooks.py  test_bug_fixes_v052.py  test_checkpoint_resume.py  test_cli_clear.py  test_cli_ext_commands.py  test_cli_helpers.py  test_cli_init_commands.py  test_cli_inspect.py  test_cli_mailbox.py  test_cli_provider_flag.py  test_cli_scaffold.py  test_cli_stats.py  test_cli_version.py  test_codex_dispatcher.py  test_codex_providers.py  test_command_check.py  test_command_check_baseline.py  test_config.py  test_config_observability.py  test_dag.py  test_dag_rendering.py  test_dashboard.py  test_dashboard_pipeline.py  test_dispatcher.py  test_dispatcher_simple.py  test_e2e.py  test_e2e_core.py  test_e2e_ext.py  test_e2e_pipeline.py  test_e2e_resume.py  test_entropy_scanner.py  test_evaluator_runner.py  test_extract_event_info.py  test_feedback_integration.py  test_gc.py  test_generator.py  (+50 more)
tests/fixtures/: sample_config.yaml  sample_status.md
(+7 files in other folders)
