[project]
name = "lindy-orchestrator"
version = "0.10.5"
description = "Lightweight, git-native multi-agent orchestration framework for autonomous project execution"
requires-python = ">=3.11"
license = "MIT"
readme = "README.md"
authors = [{ name = "Eddie Ran" }]
keywords = ["orchestration", "ai", "agent", "automation", "claude"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Intended Audience :: Developers",
    "Typing :: Typed",
]
dependencies = [
    "pydantic>=2.6,<3",
    "typer>=0.12,<1",
    "rich>=13.0,<14",
    "pyyaml>=6.0,<7",
]

[project.urls]
Homepage = "https://github.com/eddieran/lindy-orchestrator"
Repository = "https://github.com/eddieran/lindy-orchestrator"
Issues = "https://github.com/eddieran/lindy-orchestrator/issues"
Documentation = "https://github.com/eddieran/lindy-orchestrator/blob/main/docs/USAGE.md"

[project.optional-dependencies]
api = ["anthropic>=0.40,<1"]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.12",
    "pytest-cov>=5.0",
    "ruff>=0.4",
]

[project.scripts]
lindy-orchestrate = "lindy_orchestrator.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/lindy_orchestrator"]

[tool.pytest.ini_options]
# Coverage is run explicitly via CI or `pytest --cov`; not in addopts to keep
# `pytest tests/ -x -q --tb=short` fast and independent of coverage.

[tool.coverage.run]
source = ["src/lindy_orchestrator"]

[tool.coverage.report]
fail_under = 70
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.",
    "if TYPE_CHECKING:",
]

[tool.ruff]
target-version = "py311"
line-length = 100
